Fixing banner spacing

--- a/app/design/frontend/Festa/principal_theme/web/css/source/MainPage/_mainPage.less
+++ b/app/design/frontend/Festa/principal_theme/web/css/source/MainPage/_mainPage.less
@@ -22,7 +22,7 @@
         .flex-cards{
             display: flex;
             justify-content: space-around;
-            margin: 20px 50px 20px 50px;
+            margin: 20px 75px 20px 75px;
     
             div{
                 max-height: 737px;
